...
      }
    },
    "About This Scale" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Accept" : {
      "localizations" : {
        "de" : {
...

    },
    "Algorithms" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Allow Notifications" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Analytics" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Cancel" : {
      "localizations" : {
        "de" : {
...

    },
    "Close" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Continue" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Create Reflection" : {
      "localizations" : {
        "de" : {
...

    },
    "Delete Reflection" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Delete Reminder" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Done" : {
      "comment" : "A button label that confirms the user's selection.",
      "isCommentAutoGenerated" : true,
...
      }
    },
    "Edit Reflection" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Edit Reminder" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Erase All Data" : {

    },
...
      }
    },
    "Filter Reflections" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Finish" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Get Started" : {

    },
...
      }
    },
    "Happy" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Heart Rate" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Home" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "I Understand and Accept" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Learn More" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "More Info" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "New Reminder" : {

    },
...
      }
    },
    "Outreach" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Selected Date" : {
      "comment" : "A label for the selected date in the analytics view.",
      "isCommentAutoGenerated" : true,
...
      }
    },
    "Settings" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Show All" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Steps" : {
      "localizations" : {
        "de" : {
...
