...
                            }
                        }
                    } label: {
                        Label("Filter", systemImage: viewModel.missedMeasurementFilter == nil
                              ? "line.3.horizontal.decrease" : "line.3.horizontal.decrease.circle.fill")
                    }
                    .accessibilityIdentifier("missedReflections.filter")
                    .accessibilityLabel("\(String(localized: "Filter")): \(viewModel.missedMeasurementFilter?.localized ?? String(localized: "All"))")
                }
            }
            .onChange(of: viewModel.missedMeasurementFilter) {
                selectedChartID = nil
            }
...
